apps/portfolio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: portfolio-gateway
  namespace: portfolio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: portfolio
  namespace: portfolio
spec:
  hosts:
  - "*"
  gateways:
  - portfolio-gateway
  http:
  - route:
    - destination:
        host: portfolio
        port:
          number: 80
